修正部署後的子頁面與圖片路徑

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -138,7 +138,7 @@
             
             <div>
     <a href="index.html" class="flex items-end gap-1">
-        <img src="images/New logo.png" alt="竹意軒的咖啡工坊 Logo" class="h-12 w-auto">
+        <img src="/images/New logo.png" alt="竹意軒的咖啡工坊 Logo" class="h-12 w-auto">
         <span class="font-noto-serif text-gray-600 text-xs leading-none pb-2">咖啡工坊</span>
     </a>
 </div>
@@ -203,7 +203,7 @@
             <p class="text-center text-gray-500 mb-10">一場味蕾的產地探查</p>
             <div class="flex flex-col md:flex-row items-center gap-8 md:gap-12">
                 <div class="md:w-1/2 w-full flex justify-center md:justify-end">
-                    <img src="images/banner2.jpg" alt="一杯手沖咖啡與咖啡豆" class="rounded-lg shadow-lg w-5/6 h-auto object-cover">
+                    <img src="/images/banner2.jpg" alt="一杯手沖咖啡與咖啡豆" class="rounded-lg shadow-lg w-5/6 h-auto object-cover">
                 </div>
                 <div class="md:w-1/2 w-full flex justify-center">
                     <div class="max-w-md">
@@ -279,7 +279,7 @@
 
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="images/america.png" alt="中南美洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/america.png" alt="中南美洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-green-500 mb-2">中南美洲 The Americas</h3>
@@ -290,7 +290,7 @@
 
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="images/africa.png" alt="非洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/africa.png" alt="非洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-red-500 mb-2">非洲 Africa</h3>
@@ -301,7 +301,7 @@
 
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="images/Asia.png" alt="亞洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/Asia.png" alt="亞洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-yellow-500 mb-2">亞洲 Asia</h3>
@@ -312,7 +312,7 @@
             
             <div class="bg-white p-6 md:p-8 rounded-lg shadow-md flex flex-col items-center text-center gap-4">
                 <div class="w-full h-48 flex items-center justify-center">
-                    <img src="images/aus.png" alt="大洋洲咖啡產區地圖" class="w-full h-full object-contain">
+                    <img src="/images/aus.png" alt="大洋洲咖啡產區地圖" class="w-full h-full object-contain">
                 </div>
                 <div class="w-full">
                     <h3 class="text-2xl font-bold text-blue-500 mb-2">大洋洲 Oceania</h3>
@@ -379,7 +379,7 @@
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 md:gap-6">
 
     <div class="coffee-card bg-white rounded-lg shadow-lg overflow-hidden card-hover flex flex-col" data-product-id="prod_001" data-category="light-medium">
-        <img src="images/coffee/衣索比亞 雅比兔 水洗.jpg" alt="衣索比亞 耶家雪菲 咖啡豆" class="w-full h-32 md:h-40 object-cover">
+        <img src="/images/coffee/衣索比亞 雅比兔 水洗.jpg" alt="衣索比亞 耶家雪菲 咖啡豆" class="w-full h-32 md:h-40 object-cover">
         <div class="p-3 md:p-4 flex-grow flex flex-col">
             <h3 class="text-sm md:text-base font-bold text-amber-800 mb-1">衣索比亞 古籍 烏拉嘎 雅比兔 水洗</h3>
             <p class="text-gray-600 text-xs md:text-sm leading-5 mb-2">風味描述：檸檬皮、蜜柚、橘皮、蔗糖。</p>
@@ -398,7 +398,7 @@
     </div>
 
     <div class="coffee-card bg-white rounded-lg shadow-lg overflow-hidden card-hover flex flex-col" data-product-id="prod_002" data-category="light-medium">
-        <img src="images/coffee/衣索比亞 卡拉莫 遮蔭慢乾 日曬.jpg" alt="衣索比亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
+        <img src="/images/coffee/衣索比亞 卡拉莫 遮蔭慢乾 日曬.jpg" alt="衣索比亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
         <div class="p-3 md:p-4 flex-grow flex flex-col">
             <h3 class="text-sm md:text-base font-bold text-amber-800 mb-1">衣索比亞 古吉 卡拉莫 遮蔭慢乾 日曬</h3>
             <p class="text-gray-600 text-xs md:text-sm leading-5 mb-2">風味描述：藍莓、橙汁、薰衣草、蔗糖。</p>
@@ -417,7 +417,7 @@
     </div>
 
     <div class="coffee-card bg-white rounded-lg shadow-lg overflow-hidden card-hover flex flex-col" data-product-id="prod_003" data-category="light-medium">
-        <img src="images/coffee/肯亞 冽里 吉康達合作社 水洗.jpg" alt="肯亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
+        <img src="/images/coffee/肯亞 冽里 吉康達合作社 水洗.jpg" alt="肯亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
         <div class="p-3 md:p-4 flex-grow flex flex-col">
             <h3 class="text-sm md:text-base font-bold text-amber-800 mb-1">肯亞 冽里 吉康達合作社 AB Top 水洗</h3>
             <p class="text-gray-600 text-xs md:text-sm leading-5 mb-2">風味描述：黑醋栗、烏梅、洛神花、蔗糖。</p>
@@ -436,7 +436,7 @@
     </div>
 
     <div class="coffee-card bg-white rounded-lg shadow-lg overflow-hidden card-hover flex flex-col" data-product-id="prod_004" data-category="light-medium">
-        <img src="images/coffee/宏都拉斯 蜜桃莊園 卡杜艾.jpg" alt="宏都拉斯 咖啡豆" class="w-full h-32 md:h-40 object-cover">
+        <img src="/images/coffee/宏都拉斯 蜜桃莊園 卡杜艾.jpg" alt="宏都拉斯 咖啡豆" class="w-full h-32 md:h-40 object-cover">
         <div class="p-3 md:p-4 flex-grow flex flex-col">
             <h3 class="text-sm md:text-base font-bold text-amber-800 mb-1">宏都拉斯 拉巴斯省 蜜桃莊園 卡度艾 蜜處理</h3>
             <p class="text-gray-600 text-xs md:text-sm leading-5 mb-2">風味描述：橘皮、香瓜、烤杏仁、白糖。</p>
@@ -455,7 +455,7 @@
     </div>
 
     <div class="coffee-card bg-white rounded-lg shadow-lg overflow-hidden card-hover flex flex-col" data-product-id="prod_005" data-category="sale">
-        <img src="images/coffee/衣索比亞 八蕾處理廠.jpg" alt="伊索比亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
+        <img src="/images/coffee/衣索比亞 八蕾處理廠.jpg" alt="伊索比亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
         <div class="p-3 md:p-4 flex-grow flex flex-col">
             <h3 class="text-sm md:text-base font-bold text-amber-800 mb-1">衣索比亞 西達瑪 柏娜 芭蕾處理場 日曬</h3>
             <p class="text-gray-600 text-xs md:text-sm leading-5 mb-2">風味描述：葡萄、甜桃、梔子花、蔗糖。</p>
@@ -474,7 +474,7 @@
     </div>
 
     <div class="coffee-card bg-white rounded-lg shadow-lg overflow-hidden card-hover flex flex-col" data-product-id="prod_006" data-category="medium-dark">
-        <img src="images/coffee/哥倫比亞 薇拉省 水洗.jpg" alt="哥倫比亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
+        <img src="/images/coffee/哥倫比亞 薇拉省 水洗.jpg" alt="哥倫比亞 咖啡豆" class="w-full h-32 md:h-40 object-cover">
         <div class="p-3 md:p-4 flex-grow flex flex-col">
             <h3 class="text-sm md:text-base font-bold text-amber-800 mb-1">哥倫比亞 薇拉省 黃金酋長 水洗</h3>
             <p class="text-gray-600 text-xs md:text-sm leading-5 mb-2">風味描述：橘皮、烤堅果、奶油、蔗糖。</p>
@@ -553,10 +553,10 @@
 
             <div class="w-full md:w-1/2">
                 <div class="grid grid-cols-2 gap-4">
-                    <img src="images/咖啡豆.jpg" alt="竹意軒咖啡" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
-                    <img src="images/P1240561.jpg" alt="烘豆進程" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
-                    <img src="images/濾掛包.jpg" alt="竹意軒濾掛包" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
-                    <img src="images/banner.jpg" alt="冰咖啡" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
+                    <img src="/images/咖啡豆.jpg" alt="竹意軒咖啡" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
+                    <img src="/images/P1240561.jpg" alt="烘豆進程" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
+                    <img src="/images/濾掛包.jpg" alt="竹意軒濾掛包" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
+                    <img src="/images/banner.jpg" alt="冰咖啡" class="rounded-lg shadow-md aspect-[4/3] object-cover hover:scale-105 transition-transform duration-300">
                 </div>
             </div>
         </div>
