修正失效圖片

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -186,7 +186,7 @@
     <div class="w-full md:w-[2.5%] bg-amber-900 flex items-center justify-center p-8">
     </div>
     
-    <div class="w-full md:w-[97.5%] flex items-center justify-center p-8 relative text-white bg-cover bg-center" style="background-image: url('images/roaster.jpg');">
+    <div class="w-full md:w-[97.5%] flex items-center justify-center p-8 relative text-white bg-cover bg-center" style="background-image: url('/images/roaster.jpg');">
         <div class="absolute inset-0 bg-black/60"></div>
         <div class="text-center relative">
             <h1 class="text-4xl md:text-5xl font-bold mb-4 tracking-wider">探索咖啡的豐富滋味</h1>
