--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -62,9 +62,9 @@
         <div class="flex justify-between items-center">
             
             <div>
-                <a href="/platycerium/index.html" class="flex items-center gap-1">
+                <a href="/platycerium/index.html" class="flex items-end gap-1">
                     <img src="/images/New logo.png" alt="竹意軒 Logo" class="h-12 w-auto">
-                    <span class="font-noto-serif text-gray-600 text-xs leading-none pb-1">鹿角蕨小百科</span>
+                    <span class="font-noto-serif text-gray-600 text-xs leading-none pb-2">鹿角蕨小百科</span>
                 </a>
             </div>
 
