--- a/coffee/payment-failure.html
+++ b/coffee/payment-failure.html
@@ -14,13 +14,13 @@
     <div class="text-center p-10 bg-white rounded-lg shadow-xl max-w-lg">
         <svg class="w-24 h-24 text-red-500 mx-auto mb-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
         <h1 class="text-3xl font-bold text-gray-800 mb-4">付款處理失敗</h1>
-        <p class="text-gray-600 mb-6">您的付款未被接納、被取消或發生錯誤。您的帳戶將不會被收取任何費用。</p>
+        <p class="text-gray-600 mb-6">您的付款發生錯誤，可能信用卡未被接納、取消。您的帳戶將不會被收取任何費用。</p>
         <div class="space-y-4">
             <a href="/coffee/checkout.html" class="inline-block w-full bg-amber-800 hover:bg-amber-900 text-white font-bold py-3 px-8 rounded-lg transition-colors">
                 返回結帳頁面重試
             </a>
-            <a href="/index.html" class="inline-block w-full text-gray-600 hover:text-amber-800 font-bold py-3 px-8 rounded-lg transition-colors">
-                返回主網站首頁
+            <a href="/coffee/index.html" class="inline-block w-full text-gray-600 hover:text-amber-800 font-bold py-3 px-8 rounded-lg transition-colors">
+                返回咖啡網站首頁
             </a>
         </div>
     </div>
