隱私權與服務條款建立

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -485,6 +485,11 @@
             <p class="text-sm text-gray-400 mt-4">
                 本頁瀏覽人次：<span id="view-counter" class="font-bold">載入中...</span>
             </p>
+            <div class="mt-4 text-sm text-gray-400 space-x-4">
+            <a href="/terms.html" class="hover:text-white transition-colors">服務條款</a>
+            <span>|</span>
+            <a href="/privacy.html" class="hover:text-white transition-colors">隱私權政策</a>
+        </div>
         </div>
     </footer>
 
