--- a/platycerium/platycerium.html
+++ b/platycerium/platycerium.html
@@ -567,6 +567,11 @@
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
             <p>&copy; 2025 竹意軒的鹿角蕨小百科. All Rights Reserved.</p>
+            <div class="mt-4 text-sm text-gray-400 space-x-4">
+            <a href="/terms.html" class="hover:text-white transition-colors">服務條款</a>
+            <span>|</span>
+            <a href="/privacy.html" class="hover:text-white transition-colors">隱私權政策</a>
+        </div>
             <p class="text-sm text-gray-400 mt-2">為教育與推廣目的而建構的互動式網頁。</p>
             <p class="text-sm text-gray-400 mt-4">
                 本頁瀏覽人次：<span id="view-counter" class="font-bold">載入中...</span>
