庫存不足顯示7

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -717,7 +717,7 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
-    <script>
+<!--   <script>
 document.addEventListener('DOMContentLoaded', () => {
     const productGrid = document.getElementById('product-grid');
     const filterButtons = document.querySelectorAll('#filter-buttons .tab-btn');
@@ -792,7 +792,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     initializeShop();
 });
-</script>
+</script>  -->
     <form name="orders" netlify netlify-honeypot="bot-field" hidden>
   <input type="hidden" name="form-name" value="orders" />
   <p class="hidden">
