修改結帳頁LOGO

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -45,13 +45,13 @@
             display: none;
         }
         /* 圖片載入失敗時的樣式 */
-        img[alt] {
+        img[alt]{img[alt] {
             text-align: center;
             line-height: 14rem;
             background-color: #e9ecef;
             color: #6c7d6e;
             font-size: 0.875rem;
-        }
+        }}
         
         .font-noto-serif {
         font-family: 'Noto Serif TC', serif;
