--- a/coffee/checkout.html
+++ b/coffee/checkout.html
@@ -18,7 +18,7 @@
     <header class="bg-white/90 backdrop-blur-md sticky top-0 z-50 shadow-sm"><nav class="container mx-auto px-6 py-3"><div>
     <a href="/coffee/index.html" class="flex items-end gap-2">
         <img src="/images/New logo.png" alt="竹意軒 Logo" class="h-12 w-auto">
-        <span class="font-noto-serif text-gray-600 text-sm leading-none pb-1">咖啡工坊</span></a></div></nav></header>
+        <span class="font-noto-serif text-gray-600 text-xs leading-none pb-2">咖啡工坊</span></a></div></nav></header>
     <main class="container mx-auto px-6 py-12">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
             <section>
