--- a/coffee/checkout.html
+++ b/coffee/checkout.html
@@ -7,18 +7,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Noto+Serif+TC:wght@600&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Noto Sans TC', sans-serif; background-color: #FDFBF8; }
         .form-input { appearance: none; border: 1px solid #D1D5DB; border-radius: 0.375rem; padding: 0.75rem 1rem; width: 100%; transition: box-shadow 0.2s, border-color 0.2s; }
         .form-input:focus { outline: none; border-color: #A0522D; box-shadow: 0 0 0 3px rgba(160, 82, 45, 0.2); }
+        .font-noto-serif {
+        font-family: 'Noto Serif TC', serif;
+    }
     </style>
 </head>
 <body>
     <header class="bg-white/90 backdrop-blur-md sticky top-0 z-50 shadow-sm"><nav class="container mx-auto px-6 py-3"><div>
-    <a href="/coffee/index.html" class="flex items-end gap-2">
+    <a href="/coffee/index.html" class="flex items-end gap-1">
         <img src="/images/New logo.png" alt="竹意軒 Logo" class="h-12 w-auto">
-        <span class="font-noto-serif text-gray-600 text-xs leading-none pb-2">咖啡工坊</span></a></div></nav></header>
+        <span class="font-noto-serif text-gray-600 text-sm leading-none pb-2">咖啡工坊</span></a></div></nav></header>
     <main class="container mx-auto px-6 py-12">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
             <section>
