--- a/coffee/index.html
+++ b/coffee/index.html
@@ -136,7 +136,7 @@
         <div class="flex justify-between items-center">
             
             <div>
-    <a href="index.html" class="flex items-end gap-1">
+    <a href="https://zhuyixuan-official-site.netlify.app/" class="flex items-end gap-1">
         <img src="/images/New logo.png" alt="竹意軒的咖啡工坊 Logo" class="h-12 w-auto">
         <span class="font-noto-serif text-gray-600 text-xs leading-none pb-2">咖啡工坊</span>
     </a>
