--- a/coffee/index.html
+++ b/coffee/index.html
@@ -375,7 +375,7 @@
         <button class="tab-btn" data-filter="sale">低庫存促銷</button>
     </div>
     
-    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 md:gap-6">
+    <div id="product-grid" class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 md:gap-6 grid-auto-rows-fr">
     </div>
  </section>
 
