--- a/coffee/checkout.html
+++ b/coffee/checkout.html
@@ -42,7 +42,7 @@
         </div>
     </main>
     
-    <form id="ecpay-map-form" method="POST" action="https://logistics-stage.ecpay.com.tw/Express/map" style="display: none;">
+    <form id="ecpay-map-form" method="POST" action="https://logistics.ecpay.com.tw/Express/map" style="display: none;">
         <input type="hidden" name="MerchantID" />
         <input type="hidden" name="MerchantTradeNo" />
         <input type="hidden" name="LogisticsType" value="CVS" />
