--- a/coffee/checkout.html
+++ b/coffee/checkout.html
@@ -42,11 +42,11 @@
         </div>
     </main>
     
-    <form id="ecpay-map-form" method="POST" action="https://logistics.ecpay.com.tw/Express/map" style="display: none;">
+    <form id="ecpay-map-form" method="POST" action="https://logistics.ecpay.com.tw" style="display: none;">
         <input type="hidden" name="MerchantID" />
         <input type="hidden" name="MerchantTradeNo" />
         <input type="hidden" name="LogisticsType" value="CVS" />
-        <input type="hidden" name="LogisticsSubType" value="UNIMART" />
+        <input type="hidden" name="LogisticsSubType" value="UNIMARTC2C" />
         <input type="hidden" name="IsCollection" value="Y" />
         <input type="hidden" name="ServerReplyURL" />
     </form>
